[gd_scene load_steps=6 format=3 uid="uid://b6sdx5v5l772m"]

[ext_resource type="Script" uid="uid://brncsdifpd8ke" path="res://Scripts/Partida/hud.gd" id="1_toh8p"]
[ext_resource type="Texture2D" uid="uid://clny3k8wxq5x1" path="res://Assets/Interface/GameOverImage.jpg" id="2_7b8ht"]
[ext_resource type="Texture2D" uid="uid://bsiu6yvfgiroo" path="res://Assets/Interface/VitoriasSujo.jpg" id="3_ftljh"]
[ext_resource type="Texture2D" uid="uid://b0eo0x4xcairy" path="res://Assets/Interface/VitoriaLimpo.jpg" id="4_k3s11"]
[ext_resource type="Script" uid="uid://drk55k12qbjvp" path="res://Scripts/Partida/temporizador.gd" id="5_wa2qo"]

[node name="HUD" type="Control"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("1_toh8p")
imagens_fim_jogo = Dictionary[int, CompressedTexture2D]({
0: ExtResource("2_7b8ht"),
1: ExtResource("3_ftljh"),
2: ExtResource("4_k3s11")
})

[node name="Temporizador" type="Node" parent="."]
script = ExtResource("5_wa2qo")
tempo_restante = 5.0

[node name="LabelMudas" type="Label" parent="."]
layout_mode = 0
offset_right = 40.0
offset_bottom = 23.0
text = "Qtde de arvores a serem plantadas: "

[node name="LabelTempo" type="Label" parent="."]
layout_mode = 1
anchors_preset = 5
anchor_left = 0.5
anchor_right = 0.5
offset_left = -31.0
offset_right = 31.0
offset_bottom = 33.0
grow_horizontal = 2
text = "02:00"
horizontal_alignment = 1
visible_characters = 6
visible_ratio = 1.2

[node name="ImagemFim" type="Sprite2D" parent="."]
scale = Vector2(0.672527, 0.682795)
texture = ExtResource("4_k3s11")
centered = false
